--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">Tania Chauhan</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Enterprauner, Data Scientist, Designer</div>
+                    <div class="typed-text d-none">Entrepreneur, Data Scientist, Designer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                         <a href="https://drive.google.com/file/d/13kcMCj-ox8FmiGpY46Qso6kuw-_2c37s/view?usp=sharing" class="btn btn-outline-light mr-5">Download CV</a>
                         <button type="button" class="btn-play" data-toggle="modal"
@@ -109,7 +109,7 @@
                     <img class="img-fluid rounded w-100" src="img/IMG_1469.JPG" alt="">
                 </div>
                 <div class="col-lg-7">
-                    <h3 class="mb-4">Data Scientist & Enterprauner</h3>
+                    <h3 class="mb-4">Data Scientist & Entrepreneur</h3>
                     <p>I have a strong sense of determination, focus, and originality. I can prioritize my work to manage various activities
                         under time constraints and achieve deadlines. I'm quite eager to learn new technology. I'm looking for a job right
                         now where I can use my skills to advance professionally and personally while also helping the company do well.</p>
