--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid rounded w-100" src="img/IMG_1469.JPG" alt="">
+                    <img class="img-fluid rounded w-100" src="img/1.JPG" alt="">
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Data Scientist & Entrepreneur</h3>
